--- a/Index.html
+++ b/Index.html
@@ -1,91 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./Assets/style.css"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-  </head>
-  <body>
-    <header>
-      <header></header>
-      <h1>Portfolio</h1>
 
-      <nav>
-        <ul>
-          <li>
-           <h2>About-ME</h2>
-          </li>
-          <li>
-            <h2>Work</h2>
-           </li>
-          <li>
-            <h2>Contact</h2>
-            </li>
-          <li>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./assets/style.css" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio</title>
+</head>
+
+<body>
+  <header>
+    <h1>Portfolio</h1>
+    <nav>
+      <ul>
+        <li>
+          <h2>About-ME</h2>
+        </li>
+        <li>
+          <h2>Work</h2>
+        </li>
+        <li>
+          <h2>Contact</h2>
+        </li>
+        <li>
           <h2>Resume</h2>
-          </li>
-          <li>
-            <h2>Contact us</h2>
-          </li>
-        </ul>
-      </nav>
-    </header>
-  
-<section class="About-ME">
-</section>
-<h2>About-ME</h2>
-<main class="content">
-<article class="About-ME" class="float-left" alt="About-Me">
-<p>Purpose driven graduate of Business Law. With the ability to use my general knowledge of company law,contract law,land law,family law, commercial law etc and my knowledge of business as well as finance, I
-have ample experience and knowledge to meet and match the needs of your organisation. I possess good
-analytical and comprehensive skills, proficient in SQL, Microsoft Office 365 as well as Microsoft Access. I
-have a good working knowledge of PC platforms, VDI,VMW, Intune, printers, networks, databases,
-telecoms & IT systems.
-Strong experience in customer facing roles and sales.</p>
-</article>
+        </li>
+        <li>
+          <h2>Contact us</h2>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-<article class="Work">
-  <h2>Work</h2>
-<div class="Surf Report">
-    <p>
-    Surf Report
-    Mern Stack
-  </p>
-  </div> 
-  <div class="Led Wall">
-    <p>Led Wall
-      Node/IoT
-    </p>
+  <div id="container">
+    <main class="content">
+
+      <section class="about" alt="About-Me">
+        <h2>About-ME</h2>
+        <p>Purpose driven graduate of Business Law.</p>
+
+        <p>With the ability to use my general knowledge of company law, contract</p>
+        law,land law,family law, commercial law etc and my knowledge of business as well as finance, I
+        have ample experience and knowledge to meet and match the needs of your organisation.</p>
+
+        <p>I possess good analytical and comprehensive skills, proficient in SQL, Microsoft Office 365 as well as
+          Microsoft Access.</p>
+
+        <p>I have a good working knowledge of PC platforms, VDI,VMW, Intune, printers, networks, databases, telecoms &
+          IT
+          systems.</p>
+
+        <p>Strong experience in customer facing roles and sales.
+        </p>
+      </section>
+
+      <article class="work">
+        <h2>Work</h2>
+        <div class="work-project">
+          <p>
+            Surf Report
+            Mern Stack
+          </p>
+        </div>
+        <div class="work-project">
+          <p>Led Wall
+            Node/IoT
+          </p>
+        </div>
+        <div class="work-project">
+          <p>
+            Calculator
+            React/JavaScript/CSS
+          </p>
+        </div>
+        <div class="work-project">
+          <p>Patel Puzzels
+            Mern Stack
+          </p>
+        </div>
+        <div class="work-project">
+          <p>
+            Run Buddy
+            HTML/CSS
+          </p>
+        </div>
+      </article>
+    </main>
   </div>
-  <div class="Calculator">
+  <footer class="Footer">
     <p>
-      Calculator
-    React/JavaScript/CSS
-  </p>
-  </div>
-<div class="Patel Puzzels">
-    <p>Patel Puzzels
-    Mern Stack
-  </p>
-</div>
-<div class="Run Buddy">
-  <p>
-    Run Buddy
-    HTML/CSS
-  </p>
-</div>
-</article>
-<footer class="Footer">
-  <p>
     <h2>Contact us</h2>
-2345678901
-Email
-GitHub
-Twitter
-Spotify
- </p>
+    2345678901
+    Email
+    GitHub
+    Twitter
+    Spotify
+    </p>
   </footer>
-  </body>
+</body>
+
 </html>
