--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
-
-<head>
+<html lang="en"><head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="./assets/style.css" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
