--- a/_index.html
+++ b/_index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="./assets/style.css" />
+  <link rel="stylesheet" href="./Assets/style.css" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio</title>
